--- a/StartWindow.ui
+++ b/StartWindow.ui
@@ -288,19 +288,6 @@ QPushButton:hover {
      </layout>
     </widget>
    </item>
-   <item row="1" column="1">
-    <spacer name="horizontalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>405</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="0" column="2" rowspan="2">
     <layout class="QGridLayout" name="gridLayout_15">
      <item row="1" column="0" colspan="3">
@@ -398,18 +385,59 @@ QPushButton:hover {
         <number>1</number>
        </property>
        <layout class="QGridLayout" name="gridLayout_14">
-        <item row="0" column="0">
+        <item row="1" column="1">
+         <widget class="QTableView" name="completedTasksTableView">
+          <property name="styleSheet">
+           <string notr="true">QTableView {
+	background-color: none;
+	border-radius: 0px;
+}
+
+QHeaderView {
+	border-radius: 0px;
+	background-color: #f5f5f5;
+	border: 0px;
+}
+
+QHeaderView::section {
+	background-color: white;
+}
+</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QTableView" name="notCompletedTasksTableView">
+          <property name="styleSheet">
+           <string notr="true">QTableView {
+	background-color: none;
+	border-radius: 0px;
+}
+
+QHeaderView {
+	border-radius: 0px;
+	background-color: #f5f5f5;
+	border: 0px;
+}
+
+QHeaderView::section {
+	background-color: white;
+}</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" colspan="2">
          <widget class="QFrame" name="frame_12">
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>65</height>
+            <height>50</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>65</height>
+            <height>55</height>
            </size>
           </property>
           <property name="styleSheet">
@@ -435,18 +463,64 @@ QPushButton:hover {
            <property name="verticalSpacing">
             <number>7</number>
            </property>
-           <item row="0" column="3">
-            <spacer name="horizontalSpacer_6">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+           <item row="0" column="2">
+            <widget class="QPushButton" name="updateButton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
              </property>
-             <property name="sizeHint" stdset="0">
+             <property name="minimumSize">
               <size>
                <width>40</width>
-               <height>20</height>
+               <height>40</height>
               </size>
              </property>
-            </spacer>
+             <property name="maximumSize">
+              <size>
+               <width>40</width>
+               <height>40</height>
+              </size>
+             </property>
+             <property name="toolTip">
+              <string>Обновить таблицу</string>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">QPushButton {
+    border: 2px solid #8f8f91;
+    border-radius: 6px;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                      stop: 0 #f6f7fa, stop: 1 #dadbde);
+}
+
+QPushButton:pressed {
+        background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                      stop: 0 #dadbde, stop: 1 #f6f7fa);
+}
+
+QPushButton:flat {
+    border: none; /* no border for a flat push button */
+}
+
+QPushButton:default {
+    border-color: #865edd; /* make the default button prominent */
+}</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="images.qrc">
+               <normaloff>:/images/refresh.png</normaloff>:/images/refresh.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>27</width>
+               <height>27</height>
+              </size>
+             </property>
+            </widget>
            </item>
            <item row="0" column="0">
             <spacer name="horizontalSpacer_3">
@@ -461,216 +535,7 @@ QPushButton:hover {
              </property>
             </spacer>
            </item>
-           <item row="0" column="2">
-            <widget class="QPushButton" name="addButton">
-             <property name="minimumSize">
-              <size>
-               <width>84</width>
-               <height>50</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>75</width>
-               <height>16777215</height>
-              </size>
-             </property>
-             <property name="toolTip">
-              <string>Добавить задание</string>
-             </property>
-             <property name="styleSheet">
-              <string notr="true">QPushButton {
-    border: 2px solid #8f8f91;
-    border-radius: 6px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                      stop: 0 #f6f7fa, stop: 1 #dadbde);
-    min-width: 80px;
-}
-
-QPushButton:pressed {
-        background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                      stop: 0 #dadbde, stop: 1 #f6f7fa);
-}
-
-QPushButton:flat {
-    border: none; /* no border for a flat push button */
-}
-
-QPushButton:default {
-    border-color: #865edd; /* make the default button prominent */
-}</string>
-             </property>
-             <property name="text">
-              <string/>
-             </property>
-             <property name="icon">
-              <iconset resource="images.qrc">
-               <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
-             </property>
-             <property name="iconSize">
-              <size>
-               <width>35</width>
-               <height>35</height>
-              </size>
-             </property>
-            </widget>
-           </item>
           </layout>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QFrame" name="frame_13">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>65</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>65</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QFrame {
-	background-color: #dbdcf7;
-	border: 1px solid grey;
-	border-radius: 7px;
-}</string>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Raised</enum>
-          </property>
-          <layout class="QGridLayout" name="gridLayout_13">
-           <property name="topMargin">
-            <number>6</number>
-           </property>
-           <item row="0" column="0">
-            <spacer name="horizontalSpacer_5">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="0" column="2">
-            <spacer name="horizontalSpacer_7">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="0" column="1">
-            <widget class="QPushButton" name="removeButton">
-             <property name="minimumSize">
-              <size>
-               <width>84</width>
-               <height>50</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>75</width>
-               <height>16777215</height>
-              </size>
-             </property>
-             <property name="toolTip">
-              <string>Удалить задание</string>
-             </property>
-             <property name="styleSheet">
-              <string notr="true">QPushButton {
-    border: 2px solid #8f8f91;
-    border-radius: 6px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                      stop: 0 #f6f7fa, stop: 1 #dadbde);
-    min-width: 80px;
-}
-
-QPushButton:pressed {
-        background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                      stop: 0 #dadbde, stop: 1 #f6f7fa);
-}
-
-QPushButton:flat {
-    border: none; /* no border for a flat push button */
-}
-
-QPushButton:default {
-    border-color: #865edd; /* make the default button prominent */
-}</string>
-             </property>
-             <property name="text">
-              <string/>
-             </property>
-             <property name="icon">
-              <iconset resource="images.qrc">
-               <normaloff>:/images/remove.png</normaloff>:/images/remove.png</iconset>
-             </property>
-             <property name="iconSize">
-              <size>
-               <width>35</width>
-               <height>35</height>
-              </size>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QTableView" name="notCompletedTasksTableView">
-          <property name="styleSheet">
-           <string notr="true">QTableView {
-	background-color: none;
-	border-radius: 0px;
-}
-
-QHeaderView {
-	border-radius: 0px;
-	background-color: #f5f5f5;
-	border: 0px;
-}
-
-QHeaderView::section {
-	background-color: white;
-}</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QTableView" name="completedTasksTableView">
-          <property name="styleSheet">
-           <string notr="true">QTableView {
-	background-color: none;
-	border-radius: 0px;
-}
-
-QHeaderView {
-	border-radius: 0px;
-	background-color: #f5f5f5;
-	border: 0px;
-}
-
-QHeaderView::section {
-	background-color: white;
-}
-</string>
-          </property>
          </widget>
         </item>
        </layout>
@@ -1604,6 +1469,19 @@ border: none;
      </layout>
     </widget>
    </item>
+   <item row="0" column="1" rowspan="2">
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>405</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
   </layout>
  </widget>
  <tabstops>
@@ -1615,8 +1493,7 @@ border: none;
   <tabstop>todolistButton</tabstop>
   <tabstop>statisticsButton</tabstop>
   <tabstop>settingsButton</tabstop>
-  <tabstop>addButton</tabstop>
-  <tabstop>removeButton</tabstop>
+  <tabstop>updateButton</tabstop>
   <tabstop>notCompletedTasksTableView</tabstop>
   <tabstop>completedTasksTableView</tabstop>
   <tabstop>telegramButton</tabstop>
