--- a/AddOrder.ui
+++ b/AddOrder.ui
@@ -595,7 +595,7 @@
         </widget>
        </item>
        <item row="1" column="3">
-        <widget class="QComboBox" name="discounts">
+        <widget class="QComboBox" name="discountsComboBox">
          <property name="minimumSize">
           <size>
            <width>150</width>
@@ -1443,7 +1443,7 @@ QPushButton:pressed {
   <tabstop>updateTimeLine</tabstop>
   <tabstop>VIN_Line</tabstop>
   <tabstop>autoLicensePlateLine</tabstop>
-  <tabstop>discounts</tabstop>
+  <tabstop>discountsComboBox</tabstop>
   <tabstop>availableSparePartsTable</tabstop>
   <tabstop>usedSparePartsTable</tabstop>
   <tabstop>workList</tabstop>
