--- a/AddOrder.ui
+++ b/AddOrder.ui
@@ -539,7 +539,7 @@
      </item>
      <item>
       <layout class="QGridLayout" name="gridLayout_6">
-       <item row="0" column="4">
+       <item row="0" column="5">
         <widget class="QLabel" name="label_14">
          <property name="font">
           <font>
@@ -551,7 +551,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="6">
+       <item row="1" column="7">
         <widget class="QComboBox" name="orderStatusComboBox">
          <property name="minimumSize">
           <size>
@@ -575,7 +575,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
+       <item row="0" column="4">
         <widget class="QLabel" name="label_13">
          <property name="font">
           <font>
@@ -587,7 +587,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="6">
+       <item row="0" column="7">
         <widget class="QLabel" name="label_2">
          <property name="font">
           <font>
@@ -599,7 +599,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="4">
+       <item row="1" column="5">
         <widget class="QComboBox" name="serviceComboBox">
          <property name="minimumSize">
           <size>
@@ -623,7 +623,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="2">
+       <item row="1" column="3">
         <widget class="QLineEdit" name="VIN_Line">
          <property name="minimumSize">
           <size>
@@ -646,7 +646,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="5">
+       <item row="0" column="6">
         <widget class="QLabel" name="label_6">
          <property name="font">
           <font>
@@ -658,7 +658,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="3">
+       <item row="1" column="4">
         <widget class="QLineEdit" name="autoLicensePlateLine">
          <property name="minimumSize">
           <size>
@@ -681,7 +681,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="5">
+       <item row="1" column="6">
         <widget class="QComboBox" name="discountsComboBox">
          <property name="minimumSize">
           <size>
@@ -723,7 +723,36 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="2">
+       <item row="2" column="5">
+        <widget class="QLabel" name="serviceErrorLabel">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>18</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QLabel {
+	color: red;
+}</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
         <widget class="QLabel" name="label_3">
          <property name="font">
           <font>
@@ -761,32 +790,32 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="4">
-        <widget class="QLabel" name="serviceErrorLabel">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
+       <item row="1" column="2">
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
          </property>
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>18</height>
-          </size>
+         <property name="styleSheet">
+          <string notr="true">QLineEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
          </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QLabel" name="label_15">
          <property name="font">
           <font>
            <pointsize>9</pointsize>
           </font>
          </property>
-         <property name="styleSheet">
-          <string notr="true">QLabel {
-	color: red;
-}</string>
-         </property>
          <property name="text">
-          <string>Поле с адресом сервиса не должно быть пустым!</string>
+          <string>Пробег</string>
          </property>
         </widget>
        </item>
@@ -876,23 +905,20 @@
            <property name="bottomMargin">
             <number>0</number>
            </property>
-           <item row="0" column="1">
-            <spacer name="horizontalSpacer">
+           <item row="0" column="4">
+            <spacer name="horizontalSpacer_4">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeType">
-              <enum>QSizePolicy::Expanding</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>40</width>
-               <height>25</height>
+               <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
-           <item row="0" column="5">
+           <item row="0" column="6">
             <widget class="QPushButton" name="clearSparePartsListButton">
              <property name="minimumSize">
               <size>
@@ -947,6 +973,25 @@ QPushButton:pressed {
              </property>
             </widget>
            </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_9">
+             <property name="font">
+              <font>
+               <pointsize>9</pointsize>
+              </font>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">QLabel {
+	background-color: transparent;
+	border: 0px;
+	margin-left: 3px;
+}</string>
+             </property>
+             <property name="text">
+              <string>Запчасти</string>
+             </property>
+            </widget>
+           </item>
            <item row="0" column="3">
             <widget class="QLineEdit" name="sparePartsSearch">
              <property name="minimumSize">
@@ -981,37 +1026,67 @@ QPushButton:pressed {
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_9">
-             <property name="font">
-              <font>
-               <pointsize>9</pointsize>
-              </font>
-             </property>
-             <property name="styleSheet">
-              <string notr="true">QLabel {
-	background-color: transparent;
-	border: 0px;
-	margin-left: 3px;
-}</string>
-             </property>
-             <property name="text">
-              <string>Запчасти</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="4">
-            <spacer name="horizontalSpacer_4">
+           <item row="0" column="1">
+            <spacer name="horizontalSpacer">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeType">
+              <enum>QSizePolicy::Expanding</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>40</width>
-               <height>20</height>
+               <height>25</height>
               </size>
              </property>
             </spacer>
+           </item>
+           <item row="0" column="5">
+            <widget class="QPushButton" name="removeLastSparePartButton">
+             <property name="minimumSize">
+              <size>
+               <width>27</width>
+               <height>27</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>27</width>
+               <height>27</height>
+              </size>
+             </property>
+             <property name="toolTip">
+              <string>Удалить последнюю запчасть</string>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">QPushButton {
+	background-color: #dbdcf7;
+	border: 1px solid #999999;
+	border-radius: 2px;
+}
+
+QPushButton:hover {
+	background-color: #d5d6f0;
+	border: 1px solid #acacac;
+}
+
+QPushButton:pressed {
+	background-color: #cbcde6;
+	border: 2px solid #999999;
+}</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="images.qrc">
+               <normaloff>:/images/backToView.png</normaloff>:/images/backToView.png</iconset>
+             </property>
+             <property name="autoDefault">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -1285,6 +1360,9 @@ QPushButton:pressed {
                <pointsize>10</pointsize>
               </font>
              </property>
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
+             </property>
              <property name="styleSheet">
               <string notr="true">QLineEdit {
 	border: 1px solid gray;
@@ -1416,6 +1494,9 @@ QPushButton:pressed {
               <font>
                <pointsize>10</pointsize>
               </font>
+             </property>
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
              </property>
              <property name="styleSheet">
               <string notr="true">QLineEdit {
@@ -1676,6 +1757,9 @@ QPushButton:pressed {
                <pointsize>10</pointsize>
               </font>
              </property>
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
+             </property>
              <property name="styleSheet">
               <string notr="true">QLineEdit {
 	border: 1px solid gray;
@@ -1863,6 +1947,9 @@ QPushButton:pressed {
                <pointsize>10</pointsize>
               </font>
              </property>
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
+             </property>
              <property name="styleSheet">
               <string notr="true">QLineEdit {
 	border: 1px solid gray;
@@ -2046,6 +2133,9 @@ QPushButton:pressed {
               <font>
                <pointsize>10</pointsize>
               </font>
+             </property>
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
              </property>
              <property name="styleSheet">
               <string notr="true">QLineEdit {
@@ -2350,6 +2440,9 @@ QPushButton:pressed {
               <font>
                <pointsize>10</pointsize>
               </font>
+             </property>
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
              </property>
              <property name="styleSheet">
               <string notr="true">QLineEdit {
@@ -2665,33 +2758,29 @@ QPushButton:pressed {
   <tabstop>brandLine</tabstop>
   <tabstop>modelLine</tabstop>
   <tabstop>yearLine</tabstop>
+  <tabstop>lineEdit</tabstop>
   <tabstop>VIN_Line</tabstop>
   <tabstop>autoLicensePlateLine</tabstop>
   <tabstop>serviceComboBox</tabstop>
   <tabstop>discountsComboBox</tabstop>
   <tabstop>orderStatusComboBox</tabstop>
   <tabstop>sparePartsSearch</tabstop>
-  <tabstop>clearSparePartsListButton</tabstop>
   <tabstop>sparePartsList</tabstop>
-  <tabstop>worksList</tabstop>
-  <tabstop>mechanicLine</tabstop>
+  <tabstop>removeLastSparePartButton</tabstop>
+  <tabstop>clearSparePartsListButton</tabstop>
   <tabstop>mechanicHoursLine</tabstop>
   <tabstop>clearMechanicButton</tabstop>
-  <tabstop>mechanic2Line</tabstop>
   <tabstop>mechanic2HoursLine</tabstop>
   <tabstop>clearMechanic2Button</tabstop>
-  <tabstop>diagnosticianLine</tabstop>
   <tabstop>diagnosticianHoursLine</tabstop>
   <tabstop>clearDiagnosticianButton</tabstop>
-  <tabstop>electronicsLine</tabstop>
   <tabstop>electronicsHoursLine</tabstop>
   <tabstop>clearElectronicButton</tabstop>
-  <tabstop>locksmithLine</tabstop>
   <tabstop>locksmithHoursLine</tabstop>
   <tabstop>clearLocksmithButton</tabstop>
-  <tabstop>washerLine</tabstop>
   <tabstop>washerHoursLine</tabstop>
   <tabstop>clearWasherButton</tabstop>
+  <tabstop>worksList</tabstop>
   <tabstop>feedback</tabstop>
   <tabstop>openMapButton</tabstop>
   <tabstop>createOrderButton</tabstop>
